# stackscope

./: .dockerignore  .gitignore  Cargo.toml  README.md  build.rs
.github/actions/stackscope/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: stackscope.yml
docs/: validation_report.md
fixtures/cortex_m_target/: Makefile  main.c  target.elf
fixtures/cortex_m_target_acyclic/: Makefile  main.c  target.elf
fixtures/cortex_m_target_clean/: Makefile  main.c  target.elf
src/: main.rs
src/ege/: cfg_builder.rs  dwarf_cfi.rs  elf_parser.rs  mod.rs
src/mga/: memory_projector.rs  mod.rs  profile_loader.rs
src/sdt/: abstract_interpreter.rs  cycle_detector.rs  diff_engine.rs  mod.rs
src/types/: mod.rs
tests/: acyclic_analysis.rs  recursive_analysis.rs  sarif_generation.rs
validation/: compare_stack_usage.py
validation/ground_truth/zephyr/: asnprintf.c.su  asprintf.c.su  cbprintf.c.su  cbprintf_complete.c.su  cbprintf_packaged.c.su  eprintf.c.su  fprintf.c.su  fwprintf.c.su  main.c.su  main_weak.c.su  printf.c.su  s_remainder.c.su  sf_remainder.c.su  snprintf.c.su  snprintf_chk.c.su  snprintfd.c.su  snprintff.c.su  sprintf.c.su  sprintf_chk.c.su  sprintf_s.c.su  sprintfd.c.su  sprintff.c.su  swprintf.c.su  vasnprintf.c.su  vasprintf.c.su  vffprintf.c.su  vfiprintf.c.su  vflprintf.c.su  vfmprintf.c.su  vfprintf.c.su  vfprintf_s.c.su  vfwprintf.c.su  vprintf.c.su  vsnprintf.c.su  vsnprintf_chk.c.su  vsnprintf_s.c.su  vsprintf.c.su  vsprintf_chk.c.su  vswprintf.c.su  vwprintf.c.su  (+1 more)
