[package]
name = "stackscope"
version = "0.1.0"
edition = "2021"
description = "Machine-space stack geometry and divergence analysis for embedded binaries"
license = "MIT"

[dependencies]
# ELF / DWARF parsing
object = "0.32"

gimli = { version = "0.28", features = ["read"] }

# Disassembly
capstone = "0.11"

# Graph structures
petgraph = "0.6"

# Error handling
thiserror = "1.0"

# Serialization / CI output
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI Parsing
clap = { version = "4.4", features = ["derive"] }